--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <h2>TMSandbox</h2>
     <p>A testing ground to see how characters canon and noncanon to Time Machine Saga could react to random events.</p>
     <h2>Lucid (Acts 1-4)</h2>
-      <p>Lucid is a series of albums of songs. Act 1 was published on January 11, 2023. Act 2 is currently a work in progress. Acts 3 and 4 are not in the making yet. This will be updated as I keep publishing more songs. Check my soundcloud weekly to stay updated. (Link above.)</p>
+      <p>Lucid is a series of albums of songs. Act 1 was published on January 11, 2023. Act 2 was published recently in March. Act 3 is currently in the making, and Act 4 will be the final release for the series. This will be updated as I keep publishing more songs. Check my soundcloud weekly to stay updated. (Link above.)</p>
       <p></p>
     <p></p>
     </div>
-  <script type='text/javascript'  src="https://studio.code.org/f8db5b5547d93ef167b094ef5c73485f56e752bb4971141abb5cda8ffb88c8ee/inject.js?id=f7576c26-778c-4952-bd7a-37ac754b788d"></script></body>
+  </body>
 </html>
